[gd_scene load_steps=10 format=2]

[ext_resource path="res://ShieldOrb/LazerBeam.gd" type="Script" id=1]
[ext_resource path="res://ShieldOrb/particle.png" type="Texture" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.470588, 0.997059 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.60567, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = -120.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 250.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 20.0
gravity = Vector3( 0, 10, 0 )
initial_velocity = 500.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 100.0

[node name="LazerBeam" type="RayCast2D"]
cast_to = Vector2( -1000, 0 )
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
modulate = Color( 2, 2, 2, 1 )
points = PoolVector2Array( 0, 0, -100, 0 )
width = 1.0
default_color = Color( 0.980392, 0.25098, 0, 1 )
texture_mode = 1
round_precision = 3

[node name="Tween" type="Tween" parent="."]

[node name="CastingParticles2D" type="Particles2D" parent="."]
modulate = Color( 2, 2, 2, 1 )
scale = Vector2( 0.25, 0.25 )
emitting = false
lifetime = 0.3
process_material = SubResource( 5 )
texture = ExtResource( 2 )

[node name="CollidingParticles2D" type="Particles2D" parent="."]
modulate = Color( 2, 2, 2, 1 )
scale = Vector2( 0.25, 0.25 )
emitting = false
lifetime = 0.3
process_material = SubResource( 6 )
texture = ExtResource( 2 )

[node name="BeamParticles2D" type="Particles2D" parent="."]
modulate = Color( 2, 2, 2, 1 )
scale = Vector2( 0.25, 0.25 )
emitting = false
lifetime = 0.5
local_coords = false
process_material = SubResource( 8 )
texture = ExtResource( 2 )
